app/styles/templates/item/_index.scss
.item-details {
  padding-top: 2.8rem;

  .ellipsis {
    margin-bottom: 0;
  }

  .item_actions {
    float: right;
    margin: 0.5rem 0 0.5rem 0;

    a {
      text-decoration: underline;
      color: #a3aab6 !important;

      &.edit_item_link {
        margin-left: 1rem;
      }
    }
  }
}

.item_details_title {
  &.tab-bar {
    margin-bottom: 0;
  }
}

.sticky_title_bar {
  position: fixed;
  width: 100%;
  left: 0;
  top: 0;
  z-index: 100;
  border-top: 0;
}

.offer_messages_section {
  padding-top: 4rem;
}

